--- a/style.css
+++ b/style.css
@@ -176,15 +176,21 @@ footer h3{
       font-size: 30px;
    }
 
+   #first-section{
+      height: 200px;
+   }
+
    #first-section p{
       margin: 0;
-      font-size: 25px;
+      font-size: 30px;
       text-transform: uppercase;
       font-weight: 650;
+      text-align: center;
+      margin: 0 50px;
    }
    
    #first-section span{
-      font-size: 35px;
+      font-size: 40px;
    }
 }
 
